<resources>
    <string name="app_name">MyContacts</string>
    <string name="button">button</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="create_contact">Create Contact</string>
    <string name="ok">Ok</string>
    <string name="message">Message</string>
    <string name="alert">Alert</string>
    <string name="contact_list">Contact List</string>
    <string name="image">image</string>
    <string name="eg_john">eg.john</string>
    <string name="eg_paul">eg.paul</string>
    <string name="eg_1234567890">eg:1234567890</string>
    <string name="eg_johnpaul_gmail_com">eg.johnpaul@gmail.com</string>
</resources>