<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ux.fragments.ContactsListFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/contact_list"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginHorizontal="@dimen/dimen_18dp"
        android:background="@drawable/round_corner_20dp"
        android:backgroundTint="@color/app_color_very_light"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/header">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="28dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image"
            android:padding="7dp"
            android:src="@mipmap/search"
            android:tint="@color/app_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searchET"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/app_color_very_light"
            android:gravity="center_vertical"
            android:padding="3dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/clearIV"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/image"
            android:padding="8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:background="@drawable/round_corner_20dp"
            android:backgroundTint="@color/red_light"
            android:visibility="gone"
            android:src="@mipmap/close"
            android:tint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsRvList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintTop_toBottomOf="@id/searchLayout" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:progressTint="@color/app_color"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <LinearLayout
        android:id="@+id/noContactsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintTop_toBottomOf="@id/searchLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image"
            android:src="@mipmap/add_contacts"
            android:tint="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:gravity="center"
            android:text="No contacts found"
            android:tint="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:backgroundTint="@color/app_color"
        android:contentDescription="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/add_contacts" />

</androidx.constraintlayout.widget.ConstraintLayout>